force-app/main/default/objects/PH_Daily_Query_Stat__c/PH_Daily_Query_Stat__c.object-meta.xml
<CustomObject>
    <label>Daily Query Stat</label>
    <pluralLabel>Daily Query Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Stat Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>