force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Avg_Ms__c.field-meta.xml
<CustomField>
    <fullName>Avg_Ms__c</fullName>
    <label>Avg (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>