force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Avg_Rows__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rows__c</fullName>
    <label>Avg Rows</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>