force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>