force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
</CustomField>