force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <type>Text</type>
    <length>255</length>
</CustomField>