force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Fingerprint_Hash__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Hash__c</fullName>
    <label>Fingerprint Hash</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>