force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Max_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Rows__c</fullName>
    <label>Max Rows</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>