force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/P95_Ms__c.field-meta.xml
<CustomField>
    <fullName>P95_Ms__c</fullName>
    <label>P95 (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>