force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Sample_Soql__c.field-meta.xml
<CustomField>
    <fullName>Sample_Soql__c</fullName>
    <label>Sample SOQL</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>