force-app/main/default/objects/PH_Daily_Query_Stat__c/fields/Suspect_Score__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Score__c</fullName>
    <label>Suspect Score</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>